fixed alot of mistakes

--- a/_posts/2022-06-29-01-Knapsack.md
+++ b/_posts/2022-06-29-01-Knapsack.md
@@ -1,40 +1,47 @@
 ---
-title: 0/1 Knapsack
-categories: [Competitive Programming, Dynamic Programming]
+title: "0/1 Knapsack"
+categories: [Dynamic Programming]
 tags: [0/1 knapsack]     # TAG names should always be lowercase
 author: Ayush Koul
+layout: post
+toc: true
 math: true
 ---
 
 ### Problem Statement:
-We are given an array of `n` items, each with a `weight` (**W<sub>i</sub>**) and a `profit` (**P<sub>i</sub>**), and a bag (aka knapsack) which has a `limited capacity` of **C** 
-(where **C** is the maximum amount of weight that the bag can hold). The goal is to find a subset of the items such that their `total weight is <= C` and the sum of their
-profits is `maximum`.
+We are given an array of `n` items, each with a `weight` ($\boldsymbol{W_i}$) and a `profit` ($\boldsymbol{P_i}$),
+and a bag (aka knapsack) which has a `limited capacity` of $\boldsymbol{C}$ 
+(where $\boldsymbol{C}$ is the maximum amount of weight that the bag can hold). The goal is to find a subset of the
+items such that their `total weight is <= C` and the sum of theirprofits is `maximum`.
 
 Given:
 
-- `C`
-- `W : [W0, W1, ... Wn-1]`
-- `P : [P0, P1, ... Pn-1]`
-
-
-
-
+- $C$
+- $W : [W_0, W_1, ... W_{n-1}] \ (Size = n)$
+- $P : [P_0, P_1, ... P_{n-1}] \ (Size = n)$
 
 
 ### Brute-Force/Recursive Approach
-For each item, we can make `2 choices`: to `include` it or to `exclude` it. Therefore, the number of combinations/choices we have is **2<sup>n</sup>**. We can recursively
-choose or not choose an item, based on the space available in the bag, and then keep track of the maximum profit attained throught all the subsets/combinations we go through.
+For each item, we can make `2 choices`: to `include` it or to `exclude` it. Therefore, the number of combinations
+choices we have is $\boldsymbol{2^n}$. We can recursively choose or not choose an item, based on the space available
+in the bag, and then keep track of the maximum profit attained throught all the subsets/combinations we go through.
 
-The recursive function `knapsack` will take the weight array (`W`), profit array (`P`), current space left in the bag (`Space`) and the current index of the item (`i`).
-For each item, it will first check to see if the weight of the item `W[i]` doesn't excede the current capacity (`Space`) of the bag. If it does, the item will be excluded 
-(since there is no other choice). Otherwise, we will find the maximum profit between including and excluding the item (because it is possible that the item is in the subset 
-of items that result in the maximum profit and it is also possible that it is not in that subset - we need to consider both possibilites).
+The recursive function `knapsack` will take the weight array (`W`), profit array (`P`), current space left in the
+bag (`Space`) and the current index of the item (`i`).
 
-**0/1 Knapsack Recursive Decision Tree** ([Source](https://youtu.be/mGfK-j9gAQA?list=PLEJXowNB4kPxBwaXtRO1qFLpCzF75DYrS&t=1082)):
-![0/1 Knapsack Recursive Decision Tree](https://github.com/AyushKoul00/CP-Notes/blob/main/01_Knapsack_DT.PNG?raw=true)
+For each item, it will first check to see if the weight of the item `W[i]` doesn't excede the current capacity
+(`Space`) of the bag. If it does, the item will be excluded (since there is no other choice). Otherwise, we will 
+find the maximum profit between including and excluding the item (because it is possible that the item is in the 
+subset of items that result in the maximum profit and it is also possible that it is not in that subset - we need to 
+consider both possibilites).
+
+![0/1 Knapsack Recursive Decision Tree](/assets/img/01_Knapsack_DT.png)
+_0/1 Knapsack Recursive Decision Tree
+([Source](https://youtu.be/mGfK-j9gAQA?list=PLEJXowNB4kPxBwaXtRO1qFLpCzF75DYrS&t=195))_
+
 
 #### Code:
+
 ```cpp
 #include <bits/stdc++.h>
 using namespace std;
@@ -66,8 +73,8 @@ int main()
 ```
 #### Complexity Analysis:
 
-- **Time complexity: O(2<sup>n</sup>)** - Size of recursion tree will be 2<sup>n</sup>
-- **Space complexity: O(n)** - The depth of the recursion tree can go up to n.
+- **Time complexity: O($\boldsymbol{2^n}$)** - Size of recursion tree will be $\boldsymbol{2^n}$
+- **Space complexity: O($\boldsymbol{n}$)** - The depth of the recursion tree can go up to $\boldsymbol{n}$.
 
 
 
@@ -75,7 +82,10 @@ int main()
 
 
 ### Recursive (Top-down) + Memoization
-If we notice, out recursive function only depends on two things: the items we choose (`i`) and the current capacity of the bag (`Space`). The weights and profit arrays remain constant in each call (we could choose to make them global as well). Therefore, if we think of the recursive call as `knapsack(Space, i)` then we can see that out recursive function re-calculates a call with the same parameters multiple times. Example:
+If we notice, out recursive function only depends on two things: the items we choose (`i`) and the current capacity 
+of the bag (`Space`). The weights and profit arrays remain constant in each call (we could choose to make them 
+global as well). Therefore, if we think of the recursive call as `knapsack(Space, i)` then we can see that out 
+recursive function re-calculates a call with the same parameters multiple times. Example:
 
 ```
 In the following recursion tree, K(a, b) refers 
@@ -96,7 +106,11 @@ W[] = {1, 1, 1}, P[] = {10, 20, 30}, C = 2
 K(2, 0)  K(1, 0)  K(1, 0)  K(0, 0)  K(1, 0)   
 ```
 
-We can see that K(1, 1) is calculated multiple times. Eventhough it may seem like a small calculation from the example, it is actually very expensive. Imagine if the tree was very deep and we can to calculate the same sub-problems (aka sub-calls) multiple times, it would make the time complexity exponential (which is seen in the brute-force approach). Caching the result saves this time and only explores new sub-problems/sub-calls that haven't been cached.
+We can see that `K(1, 1)` is calculated multiple times. Eventhough it may seem like a small calculation from the 
+example, it is actually very expensive. Imagine if the tree was very deep and we can to calculate the same 
+sub-problems (aka sub-calls) multiple times, it would make the time complexity exponential (which is seen in the 
+brute-force approach). Caching the result saves this time and only explores new sub-problems/sub-calls that haven't 
+been cached.
 
 #### Code:
 ```cpp
@@ -143,13 +157,18 @@ int main()
     return 0;
 }
 ```
+
 #### Complexity Analysis:
 
-- **Time complexity: O(n\*C)** - This is because the recursive function will only branch or call other recursive functions if it hasn't cached the query yet. The number of possible queries is n\*C (For each item, we have to explore for all capacities <= C)
-- **Space complexity: O(n\*C + size of recursive call stack)** - We are caching n\*C results in our Hash Map.
+- **Time complexity: O($\boldsymbol{n\*C}$)** - This is because the recursive function will only branch or call 
+other recursive functions if it hasn't cached the query yet. The number of possible queries is $\boldsymbol{n\*C}$
+(For each item, we have to explore for all `capacities <= C`)
+- **Space complexity: O($\boldsymbol{n\*C}$ + size of recursive call stack)** - We are caching $\boldsymbol{n\*C}$
+results in our Hash Map.
 
 ### Bottom-Up (Tabular)
-In order to understand this approach, we need to refer back to the recurrence relation (how and when we call the recursive calls) we used in the Top-down method.
+In order to understand this approach, we need to refer back to the recurrence relation (how and when we call the
+recursive calls) we used in the Top-down method.
 ```
 //Base case:
 dp(i, 0) = 0
@@ -161,10 +180,15 @@ if (W[i] > Space)
 else
     dp(i, Space) = max(dp(i-1, Space), P[i] + dp(i-1, Space - W[i]))
 ```
-We know that `i` will be in the range of `[0, n-1]` and Space will be in the range of `[1, C]`. We can use this to change dp into a 2D matrix/array for caching the results. In addition, we will be generating the answer from the bottom up (i.e. calculating and storing the results of smaller sub problems then using those to calculate and store the larger ones). In top down, we start from the top (the answer we need, and recursively call the small sub problems), but here, we start from the bottom.
+We know that `i` will be in the range of `[0, n-1]` and Space will be in the range of `[1, C]`. We can use this to 
+change dp into a 2D matrix/array for caching the results. In addition, we will be generating the answer from the 
+bottom up (i.e. calculating and storing the results of smaller sub problems then using those to calculate and store 
+the larger ones). In top down, we start from the top (the answer we need, and recursively call the small sub 
+problems), but here, we start from the bottom.
 
-One more point to note is that, our base case checks to see if i is -1 which we can't use if we have an array (since they only go to index 0). Therefore, we will shift the values of i by +1 (make it 1 indexed) and reserve 0 for the -1 case (basically, in the code, dp[0]\[Space] = 0 since 0 works like -1)
-
+One more point to note is that, our base case checks to see if `i` is -1 which we can't use if we have an array 
+(since they only go to index 0). Therefore, we will shift the values of `i` by +1 (make it 1 indexed) and reserve 0 
+for the -1 case (basically, in the code, `dp[0][Space] = 0` since 0 works like -1)
 
 #### Code:
 ```cpp
@@ -206,5 +230,6 @@ int main()
 ```
 #### Complexity Analysis:
 
-- **Time complexity: O(n\*C)** - We have 2 nested for loops that run in total of n\*C times.
-- **Space complexity: O(n\*C)** - We are caching n\*C results in our 2D matrix/array.
+- **Time complexity: O($\boldsymbol{n\*C}$)** - We have 2 nested for loops that run in total of $\boldsymbol{n\*C}$ 
+times.
+- **Space complexity: O($\boldsymbol{n\*C}$)** - We are caching $\boldsymbol{n\*C}$ results in our 2D matrix/array.
