added new posts and fixed issues

--- a/_posts/2022-06-29-01-Knapsack.md
+++ b/_posts/2022-06-29-01-Knapsack.md
@@ -1,7 +1,7 @@
 ---
 title: "0/1 Knapsack"
-categories: [Dynamic Programming]
-tags: [0/1 knapsack]     # TAG names should always be lowercase
+categories: [Concepts, Dynamic Programming]
+tags: [knapsack]     # TAG names should always be lowercase
 author: Ayush Koul
 layout: post
 toc: true
@@ -73,8 +73,8 @@ int main()
 ```
 #### Complexity Analysis:
 
-- **Time complexity: O($\boldsymbol{2^n}$)** - Size of recursion tree will be $\boldsymbol{2^n}$
-- **Space complexity: O($\boldsymbol{n}$)** - The depth of the recursion tree can go up to $\boldsymbol{n}$.
+- **Time complexity: $\boldsymbol{O(2^n)}$** - Size of recursion tree will be $\boldsymbol{2^n}$
+- **Space complexity: $\boldsymbol{O(n)}$** - The depth of the recursion tree can go up to $\boldsymbol{n}$.
 
 
 
@@ -160,11 +160,11 @@ int main()
 
 #### Complexity Analysis:
 
-- **Time complexity: O($\boldsymbol{n\*C}$)** - This is because the recursive function will only branch or call 
+- **Time complexity: $\boldsymbol{O(n\*C)}$** - This is because the recursive function will only branch or call 
 other recursive functions if it hasn't cached the query yet. The number of possible queries is $\boldsymbol{n\*C}$
 (For each item, we have to explore for all `capacities <= C`)
-- **Space complexity: O($\boldsymbol{n\*C}$ + size of recursive call stack)** - We are caching $\boldsymbol{n\*C}$
-results in our Hash Map.
+- **Space complexity: $\boldsymbol{O(n + \text{size of recursive call stack})}$** - We are caching $\boldsymbol
+{n\*C}$ results in our Hash Map.
 
 ### Bottom-Up (Tabular)
 In order to understand this approach, we need to refer back to the recurrence relation (how and when we call the
@@ -230,6 +230,6 @@ int main()
 ```
 #### Complexity Analysis:
 
-- **Time complexity: O($\boldsymbol{n\*C}$)** - We have 2 nested for loops that run in total of $\boldsymbol{n\*C}$ 
+- **Time complexity: $\boldsymbol{O(n\*C)}$** - We have 2 nested for loops that run in total of $\boldsymbol{n\*C}$ 
 times.
-- **Space complexity: O($\boldsymbol{n\*C}$)** - We are caching $\boldsymbol{n\*C}$ results in our 2D matrix/array.
+- **Space complexity: $\boldsymbol{O(n\*C)}$** - We are caching $\boldsymbol{n\*C}$ results in our 2D matrix/array.
