--- a/_posts/2022-07-07-Kadane.md
+++ b/_posts/2022-07-07-Kadane.md
@@ -1,6 +1,6 @@
 ---
 title: "Kadane's Algorithm"
-categories: [Algorithms]
+categories: [Concepts, Special Algorithms]
 tags: [kadane]     # TAG names should always be lowercase
 author: Ayush Koul
 layout: post
@@ -61,8 +61,8 @@ int main()
 
 #### Complexity Analysis
 
-- **Time complexity: O($\boldsymbol{n^3}$)** - We are generating all possible subarrays with starting index `i` and ending index `j` (`A[i..j]`) which takes O($n^2$) and for each subarray, we are summing all the numbers up which takes O($n$) (Hence $ n^2 * n = n^3 $)
-- **Space complexity: O($1$)** - We are using no extra space other than the input array.
+- **Time complexity: $\boldsymbol{O(n^3)}$** - We are generating all possible subarrays with starting index `i` and ending index `j` (`A[i..j]`) which takes $O(n^2)$ and for each subarray, we are summing all the numbers up which takes $O(n)$ (Hence $ n^2 * n = n^3 $)
+- **Space complexity: $\boldsymbol{O(1)}$** - We are using no extra space other than the input array.
 
 > Note: `A[i..j]` denotes the subarray starting at index `i` and ending at index `j`
 {: .prompt-info }
@@ -105,8 +105,8 @@ int main()
 
 #### Complexity Analysis
 
-- **Time complexity: O($\boldsymbol{n^2}$)** - This is because we don't re-calculate the sum of every subarray.
-- **Space complexity: O($\boldsymbol{1}$)** - We are using no extra space other than the input array.
+- **Time complexity: $\boldsymbol{O(n^2)}$** - This is because we don't re-calculate the sum of every subarray.
+- **Space complexity: $\boldsymbol{O(1)}$** - We are using no extra space other than the input array.
 
 ### Kadane's Algorithm
 There is an algorithm called kadane's algorithm which solves this problem in `O(n) - Linear time` and `O(1) - Constant space`.
@@ -179,5 +179,5 @@ int main()
 
 #### Complexity Analysis
 
-- **Time complexity: O($\boldsymbol{n}$)** - We are going through the array once
-- **Space complexity: O($\boldsymbol{1}$)** - We are using no extra space other than the input array.
+- **Time complexity: $\boldsymbol{O(n)}$** - We are going through the array once
+- **Space complexity: $\boldsymbol{O(1)}$** - We are using no extra space other than the input array.
